--- a/static/styles.css
+++ b/static/styles.css
@@ -15,3 +15,28 @@ form {
   width: 80%;
   max-width: 500px; 
 }
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+th, td {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+  max-width: 500px;
+  word-wrap: break-word;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+#infobox-heading {
+  text-align: center;
+}
+
+#table-container {
+  max-height: 80vh; 
+  overflow-y: auto; 
+}
